--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="app">
-        <p>姓名:{{user.name}}</p>
+        <p>姓名:{{user.name}}{{user.name}}</p>
         <p>年龄:{{user.age}}</p>
         <span id="demo">demo</span>
     </div>
